--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@heroicons/react": "^1.0.6",
     "aos": "^2.3.4",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.0",
+    "frontend": "file:",
+    "lucide-react": "^0.503.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.3"
   },
   "scripts": {
     "start": "react-scripts start",
