--- a/package.json
+++ b/package.json
@@ -3,15 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "aos": "^2.3.4",
-    "cra-template": "1.2.0",
+    "@shadcn/ui": "^0.0.4",
+    "@tailwindcss/vite": "^4.0.6",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "avatar": "^0.1.0",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-csv": "^2.2.2",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.1",
+    "remixicon": "^4.6.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwind-variants": "^0.3.1",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,8 +56,6 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   }
 }
