--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.6",
     "@testing-library/dom": "^10.4.0",
@@ -14,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.18.1",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
